# cnc_translate

./: .gitignore  CMakeLists.txt  README.md  cli_options.cpp  cli_options.h  default.nix  flake.nix  libcnc_parse.cpp  libcnc_parse.h  libcnc_parse_internal.h  main.cpp  shell.nix
brands/: auto_geometry_function.cpp  auto_geometry_function.h  brands.h  definition_base.cpp  definition_base.h  machine_definitions.h  parameter_definitions.h  parameters.h
brands/brands/cincom/: cincom_definition.cpp  cincom_definition.h  cincomm32_4m8_definition.cpp  cincomm32_4m8_definition.h
brands/brands/okuma/: okumaosp_p300l.cpp  okumaosp_p300l.h
brands/brands/traub/: traub_auto_geometry_functions.cpp  traub_auto_geometry_functions.h  traub_definition.cpp  traub_definition.h  traubtx8h_definition.cpp  traubtx8h_definition.h
cmake/: cnc_translateConfig.cmake.in
cnc_gui/: CMakeLists.txt  cnctextdocument.cpp  cnctextdocument.h  colorcoder.cpp  colorcoder.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
errors/: errors.h
generator/: generate_g_cutting.cpp  generate_g_milling.cpp  generate_g_threads.cpp  generate_g_tools.cpp  generator.cpp  generator.h  parse_node_gen.cpp  parse_node_gen.h
lexer/: lexer.cpp  lexer.h
macros/: contracts.h
nix/: cli.nix  common.nix  gui.nix  library.nix  package.nix  shared.nix  static.nix
parser/: parse_gcodes.cpp  parse_gcodes.h  parse_mcodes.cpp  parse_mcodes.h  parse_node.cpp  parse_node.h  parser.cpp  parser.h
regex/: regex_wrapper.cpp  regex_wrapper.h
tests/: CMakeLists.txt  lexer_test.cpp  lexer_test.h  parse_node_gen_test.cpp  parser_test.cpp  process_test.cpp  test_helpers.h
tokens/: g_code_description.h  g_codes.h  iso6983.cpp  iso6983.h  m_code_descriptions.h  m_codes.h  parameter_descriptions.h  tokens.h
