include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/refs/tags/v1.17.0.tar.gz
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

add_executable(
    cnc_testing
    parser_test.h
    lexer_test.h
)
target_link_libraries(
    cnc_testing
    cnc_common
    GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(cnc_testing)
